--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 remote_theme:  niklasbuschmann/contrast@v3.0
 plugins:
+  - jekyll-relative-links
   - jekyll-remote-theme
 relative_links:
   enabled: true
